--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "autoprefixer": "^9.8.6",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "meta-extractor": "^2.1.0",
     "mongoose": "^5.12.12",
-    "postcss": "^7.0.35",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-tiny-link": "^3.6.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -49,8 +52,11 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
     "nodemon": "^2.0.7",
+    "postcss": "^7.0.35",
     "react-redux": "^7.2.4",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4"
   }
 }
