--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "gravatar": "^1.8.1",
+    "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
-    "meta-extractor": "^2.1.0",
     "mongoose": "^5.12.12",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
+    "open-graph-scraper": "^4.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-tiny-link": "^3.6.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
