--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:5000/",
   "private": true,
   "dependencies": {
+    "@2toad/profanity": "^1.3.1",
     "@craco/craco": "^6.1.2",
     "@tailwindcss/postcss7-compat": "^2.1.2",
     "@testing-library/jest-dom": "^5.12.0",
