--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "classius",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000/",
+  "proxy": "https://classius.herokuapp.com",
   "private": true,
   "dependencies": {
     "@2toad/profanity": "^1.3.1",
